# axum-ecommerce-backend-example

./: README.md
flyio-example/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
flyio-example/src/: main.rs
shuttle-example/: .gitignore  Cargo.toml
shuttle-example/src/: auth.rs  main.rs  router.rs
