[package]
name = "shuttle-example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.13.0"
axum = "0.6.12"
shuttle-axum = "0.13.0"
tokio = "1.26.0"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls"] }
shuttle-shared-db = { version = "0.13.0", features = ["postgres", "sqlx"] }
shuttle-secrets = "0.13.0"
serde = { version = "1.0.159", features = ["derive"] }
axum-macros = "0.3.7"
async-stripe = { version = "0.18.4", features = ["runtime-tokio-hyper"] }
lettre = "0.10.3"
rand = "0.8.5"
time = "0.3.20"
axum-extra = { version = "0.7.2", features = ["cookie-private"] }
bcrypt = "0.14.0"
